--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#BDBDBD</color>
+    <color name="red">#E53935</color>
+    <color name="dark_grey">#616161</color>
+    <color name="green">#00897B</color>
+    <color name="light_grey">#E0E0E0</color>
+    <color name="lavender">#8692f7</color>
+    <color name="white_grey">#F5F5F5</color>
 </resources>
